# USLaw-expert-RAG

./: .env.example  .gitignore  README.md  debug_gemini.py  debug_models.py  pyproject.toml  reasoning_output.json  repoContext.md  requirements.txt  test_system_capabilities.py
.agent/rules/: problem-solver.md
.github/workflows/: backend.yml  ci.yml  frontend.yml
api/: index.py
data/: evaluation_set.json
data/USCODE-2023-title17/: dip.xml  mods.xml  premis.xml
data/USCODE-2023-title17/html/: USCODE-2023-title17-chap1-front.htm  USCODE-2023-title17-chap1-sec101.htm  USCODE-2023-title17-chap1-sec102.htm  USCODE-2023-title17-chap1-sec103.htm  USCODE-2023-title17-chap1-sec104.htm  USCODE-2023-title17-chap1-sec104A.htm  USCODE-2023-title17-chap1-sec105.htm  USCODE-2023-title17-chap1-sec106.htm  USCODE-2023-title17-chap1-sec106A.htm  USCODE-2023-title17-chap1-sec107.htm  USCODE-2023-title17-chap1-sec108.htm  USCODE-2023-title17-chap1-sec109.htm  USCODE-2023-title17-chap1-sec110.htm  USCODE-2023-title17-chap1-sec111.htm  USCODE-2023-title17-chap1-sec112.htm  USCODE-2023-title17-chap1-sec113.htm  USCODE-2023-title17-chap1-sec114.htm  USCODE-2023-title17-chap1-sec115.htm  USCODE-2023-title17-chap1-sec116.htm  USCODE-2023-title17-chap1-sec116A.htm  USCODE-2023-title17-chap1-sec117.htm  USCODE-2023-title17-chap1-sec118.htm  USCODE-2023-title17-chap1-sec119.htm  USCODE-2023-title17-chap1-sec120.htm  USCODE-2023-title17-chap1-sec121.htm  USCODE-2023-title17-chap1-sec121A.htm  USCODE-2023-title17-chap1-sec122.htm  USCODE-2023-title17-chap1-toc.htm  USCODE-2023-title17-chap1.htm  USCODE-2023-title17-chap10-front.htm  USCODE-2023-title17-chap10-subchapA-sec1001.htm  USCODE-2023-title17-chap10-subchapA.htm  USCODE-2023-title17-chap10-subchapB-sec1002.htm  (+165 more)
frontend/: eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
src/: ingestion.py  main.py  query_engine.py  utils.py
src/law_rag/: __init__.py  api.py  config.py  custom_llm.py  evaluate.py  ingestion.py  light_gemini.py  main.py  query_engine.py  test_reasoning.py  utils.py
tests/: conftest.py  test_api.py  test_config.py  test_custom_llm.py  test_ingestion.py  test_light_gemini.py  test_query_engine.py  test_utils.py
(+48 files in other folders)
