[project]
name = "law-rag"
version = "0.1.0"
description = "RAG system for US Code Title 17 using LlamaIndex, Groq, and Pinecone"
requires-python = ">=3.11"
dependencies = [
    # Core LlamaIndex
    "llama-index>=0.12.0",
    # Groq LLM
    "llama-index-llms-groq>=0.3.0",
    # Ollama Embeddings (local)
    "llama-index-embeddings-ollama>=0.5.0",
    # Pinecone Vector Store
    "llama-index-vector-stores-pinecone>=0.4.0",
    "pinecone>=5.0.0",
    # Document Readers
    "llama-index-readers-file>=0.3.0",
    "pypdf>=4.0.0",
    # Utils
    "python-dotenv>=1.0.0",
    "llama-index-embeddings-huggingface>=0.6.1",
    # HTML Processing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
